[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/pirate/accessories/hats/mugiwara.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player/anim_mesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/art/pirate/accessories/hats/basic.png" type="Texture" id=13]
[ext_resource path="res://scenes/Utility/CharacterCreator/CharacterCreator.gd" type="Script" id=14]
[ext_resource path="res://assets/fonts/LUCKIESTGUY-REGULAR.TTF" type="DynamicFontData" id=15]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 15 )

[node name="CharacterCreator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 877.0
margin_bottom = 513.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2157.0
margin_bottom = 1389.0
color = Color( 0.517647, 0.517647, 0.517647, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 285.0
margin_top = 62.0
margin_right = 699.0
margin_bottom = 505.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel/ScrollContainer"]
margin_right = 132.0
margin_bottom = 64.0
columns = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Basic" type="TextureButton" parent="Panel/ScrollContainer/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture_normal = ExtResource( 13 )

[node name="Mugiwara" type="TextureButton" parent="Panel/ScrollContainer/GridContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture_normal = ExtResource( 1 )

[node name="mesh" parent="." instance=ExtResource( 2 )]
position = Vector2( 404, 501 )
scale = Vector2( 3, 3 )

[node name="GoOutButton" type="Button" parent="."]
margin_left = 1595.0
margin_top = 983.0
margin_right = 1846.0
margin_bottom = 1047.0
custom_fonts/font = SubResource( 2 )
text = "Go Out"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Preset" type="MenuButton" parent="."]
margin_left = 756.0
margin_top = 154.0
margin_right = 930.0
margin_bottom = 196.0
text = "Preset Selector"
flat = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CostumeContainer" type="TabContainer" parent="."]
margin_left = 1295.0
margin_top = 154.0
margin_right = 1844.0
margin_bottom = 952.0
tab_align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Hats" type="ScrollContainer" parent="CostumeContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CostumeContainer/Hats"]
margin_right = 200.0
margin_bottom = 200.0
columns = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CostumeContainer/Hats/GridContainer"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 13 )
expand = true

[node name="Sliders" type="VBoxContainer" parent="."]
margin_left = 756.0
margin_top = 292.0
margin_right = 1265.0
margin_bottom = 332.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sliders"]
margin_right = 509.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
text = "Head"

[node name="head" type="HSlider" parent="Sliders"]
margin_top = 29.0
margin_right = 509.0
margin_bottom = 45.0
min_value = -360.0
max_value = 360.0

[node name="Label2" type="Label" parent="Sliders"]
margin_top = 49.0
margin_right = 509.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "Left Arm"

[node name="l_upper" type="HSlider" parent="Sliders"]
margin_top = 78.0
margin_right = 509.0
margin_bottom = 94.0
min_value = -360.0
max_value = 360.0

[node name="Label3" type="Label" parent="Sliders"]
margin_top = 98.0
margin_right = 509.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 3 )
text = "Left Forearm"

[node name="l_lower" type="HSlider" parent="Sliders"]
margin_top = 127.0
margin_right = 509.0
margin_bottom = 143.0
min_value = -360.0
max_value = 360.0

[node name="Label4" type="Label" parent="Sliders"]
margin_top = 147.0
margin_right = 509.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 3 )
text = "Right Arm"

[node name="r_upper" type="HSlider" parent="Sliders"]
margin_top = 176.0
margin_right = 509.0
margin_bottom = 192.0
min_value = -360.0
max_value = 360.0

[node name="Label5" type="Label" parent="Sliders"]
margin_top = 196.0
margin_right = 509.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 3 )
text = "Right Forearm"

[node name="r_lower" type="HSlider" parent="Sliders"]
margin_top = 225.0
margin_right = 509.0
margin_bottom = 241.0
min_value = -360.0
max_value = 360.0

[node name="Label6" type="Label" parent="Sliders"]
margin_top = 245.0
margin_right = 509.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 3 )
text = "Left Thigh"

[node name="l_thigh" type="HSlider" parent="Sliders"]
margin_top = 274.0
margin_right = 509.0
margin_bottom = 290.0
min_value = -360.0
max_value = 360.0

[node name="Label7" type="Label" parent="Sliders"]
margin_top = 294.0
margin_right = 509.0
margin_bottom = 319.0
custom_fonts/font = SubResource( 3 )
text = "Left Leg"

[node name="l_leg" type="HSlider" parent="Sliders"]
margin_top = 323.0
margin_right = 509.0
margin_bottom = 339.0
min_value = -360.0
max_value = 360.0

[node name="Label8" type="Label" parent="Sliders"]
margin_top = 343.0
margin_right = 509.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 3 )
text = "Right Thigh"

[node name="r_thigh" type="HSlider" parent="Sliders"]
margin_top = 372.0
margin_right = 509.0
margin_bottom = 388.0
min_value = -360.0
max_value = 360.0

[node name="Label9" type="Label" parent="Sliders"]
margin_top = 392.0
margin_right = 509.0
margin_bottom = 417.0
custom_fonts/font = SubResource( 3 )
text = "Right Leg"

[node name="r_leg" type="HSlider" parent="Sliders"]
margin_top = 421.0
margin_right = 509.0
margin_bottom = 437.0
min_value = -360.0
max_value = 360.0

[node name="torso" type="HSlider" parent="Sliders"]
visible = false
margin_top = 441.0
margin_right = 509.0
margin_bottom = 457.0
min_value = -360.0
max_value = 360.0

[node name="hat" type="HSlider" parent="Sliders"]
visible = false
margin_top = 441.0
margin_right = 509.0
margin_bottom = 457.0
min_value = -360.0
max_value = 360.0

[node name="cc_flip" type="CheckBox" parent="Sliders"]
margin_top = 441.0
margin_right = 509.0
margin_bottom = 474.0
custom_fonts/font = SubResource( 4 )
text = "Flip"

[node name="Button" type="Button" parent="."]
margin_left = 756.0
margin_top = 837.0
margin_right = 949.0
margin_bottom = 899.0
custom_fonts/font = SubResource( 5 )
text = "Add Pose"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GoOutButton" to="." method="_on_GoOutButton_pressed"]
[connection signal="toggled" from="Sliders/cc_flip" to="." method="_on_cc_flip_toggled"]
[connection signal="pressed" from="Button" to="." method="add_pose"]
